css/index.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
@import url("color-scheme.css");

* {
	box-sizing: border-box;
  outline: none;
}

body {
  overflow-y: scroll;
  background-color: var(--body-background-color);
  color: var(--color);
}

input {
  color: var(--color);
}

html, body {
	font-family: 'Open Sans', sans-serif;
	font-size: 15px;
	margin: 0;
	padding: 0;
	min-width: 280px;
}

p {
  margin: 0 0 10px 0;
}

ul {
	padding-left: 30px;
  margin: 8px 0;
  list-style: none;
}

.hidden {
  display: none !important;
}


.search-wrapper {
    margin: 0 0 40px 0;
  /* wip */
  /* position: sticky;
  top: 0;
  background-color: white;
  margin: 5px;
  margin: -20px 0 20px;
  padding: 13px 0px;
  box-shadow: 7px 11px 15px -7px rgba(39, 0, 0, 0.3); */
}

  .search-wrapper .result {
    padding: 9px;
    background-color: var(--tag-match-background-color);
    color: white;
    border-radius: 3px;
    padding: 3px 5px 4px 5px;
    width: 250px;
    margin-top: 4px;
  }

  .search-wrapper .search {
    display: grid;
    grid-template-columns: auto;
    font-size: 15px;
    width: 250px;
    border: solid 1px var(--search-border-color);
    border-radius: 4px;
    overflow: hidden;
    background-image: url('../img/search.svg');
    background-repeat: no-repeat;
    background-size: 22px 22px;
    background-position: 3px center;
    box-shadow: inset 0px 3px 7px -8px #000000;
  }

.search.found {
  grid-template-columns: auto auto;
}

  .search div input {
    border: 0px;
    padding: 8px 8px 9px 28px;
    background-color: transparent;
    font-size: 15px;
    width: 100%;
  }

  .search .btn-clear {
    display: none;
    justify-content: center;
    align-items: center;
    padding: 0 10px;
    cursor: pointer;
    user-select: none;
  }

  .search .btn-clear svg {
    width:12px;
  }

  .search.found .btn-clear {
    display: flex;
  }

code {
  font-family: monospace;
  background: #f6f3f2;
  color: #333;
  padding: 2px 4px;
  display: inline-block;
}

li::before {
  content: "•";
  color: var(--link-color);
  font-size: 130%;
  vertical-align: middle;
  font-weight: bold;
  padding-right: 9px;
  margin-left: -20px;
}

li {
  line-height: 140%;
  margin-bottom: 10px;
}

section.portfolio {
	max-width: 875px;
	margin: 0 auto;
	display: grid;
	row-gap: 20px;
  padding-top: 0px;
}

a, a:visited {
  color: var(--link-color);
  transition: background-color .2s, color .2s;
  text-decoration: none;
}

section.articles {
  display: none;
}

section.title {
  color: white;
  padding-top: 40px;
  margin-bottom: 40px;
  background-image: url('../img/header.jpg');
  background-size: cover;
  background-position-y: center;
}

.avatar {
  width: 120px;
  height: 120px;
  border-radius: 100px;
  box-shadow: 7px 11px 9px -11px rgba(39, 0, 0, 0.3);
  margin: 0 15px 15px 0;
}

.avatar-wrapper {
  display: flex;
  align-content: center;
  align-items: center;
}

section .content-wrapper {
  padding: 0px 50px 30px;
  max-width: 875px;
  margin: 0 auto;
  font-weight: 100;
  font-size: 17px;
  box-sizing: border-box;
}

section ul {
  margin: 15px 0 20px 0;
}

section .links {
  margin: 15px 0 24px 0;
}

  section .links a {
  	white-space: nowrap;
    text-decoration: none;
    padding: 6px 10px 7px;
    fill: #000;
    color: #000;
    transition: background-color .2s;
    border-radius: 3px;
    background-color: white;
    margin: 3px;
    display: inline-block;
    line-height: 14px;
    font-weight: normal;
    border: solid 1px #8e8e8e;
  }

  section .links a svg {
    height: 18px;
    width: 18px;
    vertical-align: middle;
    padding-right: 8px;
    box-sizing: content-box;
  }

  section .links a span {
    font-size: 14px;
    text-decoration: none;
    color: #000;
  }

  section .links a:hover {
    background-color: #fff;
  }

h1 {
  font-size: 32px;
 	font-weight: 400;
  margin: 0 0 15px 0;
  color: #fff;
  text-shadow: 0px 1px 5px #8e9fb187;
}

h2 {
  font-size: 17px;
  font-weight: 400;
  margin: 0 0 10px 0;
  text-shadow: 0px 1px 5px #162e46;
}

.no-line-break {
  white-space: nowrap;
}

h3 {
  font-size: 22px;
 	font-weight: 400;
  margin: 0 0 15px 0;
  color: var(--h3-color);
}

h4 {
  margin: 0 0 10px;
}

.item {
  display: grid;
  grid-template-columns: 320px auto;
  grid-template-rows: auto;
  column-gap: 20px;
  overflow: hidden;
  padding-bottom: 30px;
  padding-top: 20px;
  border-top: 1px solid var(--item-divider-color);
  font-size: 15px;
}

.item .tag {
  font-size: 13px;
  font-weight: normal;
  color: var(--tag-color);
  padding: 3px 5px 4px 5px;
  border-radius: 3px;
  background-color: var(--tag-background-color);
  margin: 0px 4px 4px 0;
  white-space: nowrap;
  display: inline-block;
}

  .item .tag.found {
    background-color: var(--tag-match-background-color);
    color: white;
  }

.item .title {
  font-size: 17px;
  font-weight: 600;
  margin-top: -3px;
  padding: 0 0 5px 0;
}

.item .content {
  margin: 16px 0 0 0;
}

  .item .content p {
    margin: 0 0 8px 0;
  }

  .item .content a.demo {
    color: var(--btn-color);
    border: solid 1px var(--btn-border-color);
    border-radius: 3px;
    padding: 4px 10px 5px;
    display: inline-block;
    margin: 8px 8px 0 0;
    width: max-content;
    transition: background-color .2s, color .2s;
    font-size: 14px;
  }

  .item .content a.demo:hover {
    background-color: var(--button-background-color-hover);
  }

  .item .content a.demo.code{
    background-position: 10px center;
    background-repeat: no-repeat;
    padding-left: 28px;
  }

.item .description {
  font-size: 15px;
  font-weight: 100;
  margin: 0 0 16px 0;
}

.item .install {
  margin: 0 0 5px 0;
}

.item .install::before {
  margin: 0 10px 0 0;
  display: inline-block;
  content: "Install: ";
  font-weight: 600;
}

.item .issues::before {
  margin: 0 10px 0 0;
  display: inline-block;
  content: "Issues: ";
  font-weight: 600;
}

.item .img {
  grid-column: 1;
  grid-row: span 4;
  width: 100%;
  height: 100%;
  overflow: hidden;
  box-shadow: 7px 11px 9px -7px rgba(39, 0, 0, 0.3);
  max-height: 212px;
  border: solid 1px var(--item-divider-color);
  border-radius: 4px;
}

.item .img img {
  width: auto;
  max-height: 213px;
}


@media only screen and (max-width: 900px) {

	.item {
		grid-template-columns: 260px auto;
	}

  .item .img,
  .item .img img {
  	max-height: 173px;
  }

}


@media only screen and (max-width: 800px) {

  .content-wrapper {
    padding-left: 40px;
    padding-right: 40px;
  }

  .avatar {
    width: 100px;
    height: 100px;
  }

}


@media only screen and (max-width: 700px) {

  .content-wrapper {
    padding-left: 20px;
    padding-right: 20px;
  }

	.item {
		grid-template-columns: auto;
		padding-bottom: 40px;
	}

  .item .title {
    font-size: 19px;
  }

  .item:last-of-type {
    padding-bottom: 0;
  }

	.item .img {
		grid-row: 1;
		margin-bottom: 24px;
		max-height: 150px;
		max-width: 370px;
		width: calc(100% - 15px); /* ensure shadow isn't cut off */
  }

  .item .content {
		grid-column: 1;
  }

  .item .img img {
 		max-height: unset;
    width: 100%;
	}

}

